Fix CI by removing support for nanos packaging and checks

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,61 +58,6 @@ jobs:
           cd ./app/rust
           cargo clippy --all-targets --features "clippy"
 
-  build_ledger:
-    needs: configure
-    runs-on: ubuntu-latest
-    container:
-      image: zondax/ledger-app-builder:latest
-      options: --user ${{ needs.configure.outputs.uid_gid }}
-      env:
-        BOLOS_SDK: /opt/nanos-secure-sdk
-    outputs:
-      size: ${{steps.build.outputs.size}}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - name: Build Standard app
-        id: build
-        shell: bash -l {0}
-        run: |
-          make PRODUCTION_BUILD=0
-          echo "size=$(python3 deps/ledger-zxlib/scripts/getSize.py s)" >> $GITHUB_OUTPUT
-
-  build_ledger_production:
-    needs: configure
-    runs-on: ubuntu-latest
-    container:
-      image: zondax/ledger-app-builder:latest
-      options: --user ${{ needs.configure.outputs.uid_gid }}
-      env:
-        BOLOS_SDK: /opt/nanos-secure-sdk
-    outputs:
-      size: ${{steps.build.outputs.size}}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - name: Build Production app
-        id: build
-        shell: bash -l {0}
-        run: |
-          make PRODUCTION_BUILD=1
-          echo "size=$(python3 deps/ledger-zxlib/scripts/getSize.py s)" >> $GITHUB_OUTPUT
-
-  size_nano_s:
-    needs: build_ledger
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    env:
-      NANOS_LIMIT_SIZE: 136
-    steps:
-      - run: |
-          echo "LNS app size: ${{needs.build_ledger.outputs.size}} KiB"
-          [ ${{needs.build_ledger.outputs.size}} -le $NANOS_LIMIT_SIZE ]
-
   test_zemu:
     runs-on: ${{ github.repository_owner == 'zondax' && 'zondax-runners' || 'ubuntu-latest' }}
     steps:
@@ -157,41 +102,24 @@ jobs:
           name: snapshots-tmp
           path: tests_zemu/snapshots-tmp/
 
-  build_package_nanos:
-    needs: [configure, build_ledger, test_zemu, rust_tests]
-    if: ${{ github.ref == 'refs/heads/master' }}
+  build_ledger:
+    needs: configure
     runs-on: ubuntu-latest
     container:
       image: zondax/ledger-app-builder:latest
       options: --user ${{ needs.configure.outputs.uid_gid }}
       env:
-        BOLOS_SDK: /opt/nanos-secure-sdk
+        BOLOS_SDK: /opt/nanosplus-secure-sdk
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: true
-      - name: Install deps
-        run: pip install ledgerblue
-
-      - name: Build NanoS
+          submodules: recursive
+      - name: Build Standard app
+        id: build
         shell: bash -l {0}
         run: |
-          PRODUCTION_BUILD=0 make
-          mv ./app/pkg/installer_s.sh ./app/pkg/installer_nanos.sh
-      - name: Set tag
-        id: nanos
-        run: echo "tag_name=$(./app/pkg/installer_nanos.sh version)" >> $GITHUB_OUTPUT
-      - name: Create or Update Release (1)
-        id: create_release_0
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          files: ./app/pkg/installer_nanos.sh
-          tag_name: ${{ steps.nanos.outputs.tag_name }}
-          draft: false
-          prerelease: false
+          make PRODUCTION_BUILD=0
 
   build_package_nanosp:
     needs: [configure, build_ledger, test_zemu, rust_tests]
