--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -47,7 +47,7 @@ panic-halt = "0.2.0"
 [profile.release]
 lto = false
 codegen-units = 1
-debug = true
+debug = false
 opt-level = "z"
 
 [profile.dev]
@@ -56,10 +56,3 @@ panic = "abort"
 [features]
 clippy = []
 derive-debug = []
-
-[patch.crates-io]
-# decaf377 = { path = "../decaf377" }
-# decaf377-rdsa = { path = "../decaf377-rdsa" }
-# decaf377 = { path = "../decaf377" }
-# decaf377-rdsa = { path = "../decaf377-rdsa" }
-# blake2b_simd = { path = "../blake2_simd/blake2b" }
