--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -45,10 +45,16 @@ getrandom = { version = "0.1.14", default-features = false }
 panic-halt = "0.2.0"
 
 [profile.release]
-lto = false
 codegen-units = 1
 debug = false
 opt-level = "z"
+panic = "abort"
+# lto = false
+# Settings below aimed to reduce
+# binary size due to code
+lto = "thin"
+overflow-checks = false
+strip = true
 
 [profile.dev]
 panic = "abort"
