--- a/app/rust/.cargo/config.toml
+++ b/app/rust/.cargo/config.toml
@@ -19,6 +19,8 @@ rustflags = [
     "link-arg=-Tlink.ld",
     "-C",
     "inline-threshold=0",
+    "-C",
+    "panic=abort",            # Add this line to disable unwinding
 ]
 
 
@@ -28,4 +30,6 @@ rustflags = [
     "link-arg=-Wl,--gc-sections",
     "-C",
     "link-arg=-Wl,--as-needed",
+    "-C",
+    "panic=abort",                # Add this line to disable unwinding
 ]
