--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -33,7 +33,6 @@ bech32 = { version = "0.11.0", default-features = false }
 chacha20poly1305 = { version = "0.10.1", default-features = false }
 
 [dev-dependencies]
-hex-literal = "0.4.1"
 hex = "0.4.2"
 no-std-compat = { version = "0.4.1", features = ["std"] }
 blake2b_simd = { version = "1.0.2", default-features = false }
@@ -57,8 +56,11 @@ overflow-checks = false
 strip = true
 
 [profile.dev]
+lto = false
 panic = "abort"
 
 [features]
 clippy = []
 derive-debug = []
+# use when compiling this crate as a lib for the cpp_tests suite
+cpp_tests = []
