--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -33,6 +33,8 @@ bech32 = { version = "0.11.0", default-features = false }
 chacha20poly1305 = { version = "0.10.1", default-features = false }
 # rand_core = { version = "0.6.4", default-features = false }
 rand_chacha = { version = "0.3.1", default-features = false }
+ethnum = { version = "1.3", default-features = false }
+itoa = { version = "1.0.1", default-features = false }
 
 [dev-dependencies]
 hex = "0.4.2"
