update zxlib and ensure the code is compilable

--- a/.gitignore
+++ b/.gitignore
@@ -78,5 +78,6 @@ fuzz-*.log
 /scan-build
 app/rust/.cargo/registry
 app/rust/.cargo/.package-cache
+app/rust/.cargo/.global-cache
 app/rust/.cargo/git
 app/rust/target
