--- a/app/rust/.cargo/config.toml
+++ b/app/rust/.cargo/config.toml
@@ -18,7 +18,7 @@ rustflags = [
     "-C",
     "link-arg=-Tlink.ld",
     "-C",
-    "inline-threshold=0",
+    "llvm-args=--inline-threshold=0",
     "-C",
     "panic=abort",            # Add this line to disable unwinding
 ]
@@ -30,6 +30,8 @@ rustflags = [
     "link-arg=-Wl,--gc-sections",
     "-C",
     "link-arg=-Wl,--as-needed",
+    "-C",
+    "llvm-args=--inline-threshold=0",
     "-C",
     "panic=abort",                # Add this line to disable unwinding
 ]
