--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,6 +162,7 @@ file(GLOB_RECURSE LIB_SRC
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/c_api/rust.c
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/ics20_withdrawal.c
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/undelegate_claim.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/delegator_vote.c
         )
 
 add_library(app_lib STATIC ${LIB_SRC})
