fix to run fuzzer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -243,7 +243,9 @@ if(ENABLE_FUZZING)
 
     foreach(target ${FUZZ_TARGETS})
         add_executable(fuzz-${target} ${CMAKE_CURRENT_SOURCE_DIR}/fuzz/${target}.cpp)
-        target_link_libraries(fuzz-${target} PRIVATE app_lib)
+        target_link_libraries(fuzz-${target} PRIVATE 
+        app_lib
+        rslib)
         target_link_options(fuzz-${target} PRIVATE "-fsanitize=fuzzer")
     endforeach()
 else()
