--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,6 +163,7 @@ file(GLOB_RECURSE LIB_SRC
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/ics20_withdrawal.c
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/undelegate_claim.c
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/delegator_vote.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/position_open.c
         )
 
 add_library(app_lib STATIC ${LIB_SRC})
