--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,6 +164,7 @@ file(GLOB_RECURSE LIB_SRC
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/undelegate_claim.c
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/delegator_vote.c
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/position_open.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/position_close.c
         )
 
 add_library(app_lib STATIC ${LIB_SRC})
