--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,6 +165,7 @@ file(GLOB_RECURSE LIB_SRC
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/delegator_vote.c
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/position_open.c
         ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/position_close.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/app/src/plan/position_withdraw.c
         )
 
 add_library(app_lib STATIC ${LIB_SRC})
