--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -35,6 +35,7 @@ chacha20poly1305 = { version = "0.10.1", default-features = false }
 rand_chacha = { version = "0.3.1", default-features = false }
 ethnum = { version = "1.3", default-features = false }
 itoa = { version = "1.0.1", default-features = false }
+cfg-if = "1.0.0"
 
 [dev-dependencies]
 hex = "0.4.2"
@@ -51,13 +52,14 @@ panic-halt = "0.2.0"
 codegen-units = 1
 debug = false
 opt-level = "z"
-panic = "abort"
 # lto = false
 # Settings below aimed to reduce
 # binary size due to code
-lto = "fat"
+# lto = "fat"
+lto = "thin"
 overflow-checks = false
 strip = "symbols"
+panic = "abort"
 
 [profile.dev]
 lto = false
