--- a/app/Makefile
+++ b/app/Makefile
@@ -20,30 +20,23 @@ ifeq ($(BOLOS_SDK),)
 $(error BOLOS_SDK is not set)
 endif
 
+########################################
+#        Mandatory configuration       #
+########################################
 # Upload targets to configure the devices 
 include $(BOLOS_SDK)/Makefile.defines
 
-# Set the default value for PRODUCTION_BUILD to 0 if not already defined
-PRODUCTION_BUILD ?= 1
+# Application name
+APPNAME = "Penumbra"
 
-# Display whether this is a production build or for internal use
-ifeq ($(PRODUCTION_BUILD), 1)
-    $(info ************ PRODUCTION_BUILD  = [PRODUCTION BUILD])
-else
-    $(info ************ PRODUCTION_BUILD  = [INTERNAL USE])
-endif
+# Application version
+APPVERSION_M = 0
+APPVERSION_N = 1
+APPVERSION_P = 3
+APPVERSION = "$(APPVERSION_M).$(APPVERSION_N).$(APPVERSION_P)"
 
- # Add the PRODUCTION_BUILD definition to the compiler flags
-DEFINES += PRODUCTION_BUILD=$(PRODUCTION_BUILD)
-
-# Display whether swap functionality is enabled or not
-ifeq ($(ENABLE_SWAP), 1)
-    $(info ************ HAVE_SWAP  = [ENABLED])
-else
-    $(info ************ HAVE_SWAP  = [DISABLED])
-endif
-
-include $(CURDIR)/Makefile.version
+# Application source files
+APP_SOURCE_PATH += src
 
 # Application icons following guidelines:
 # https://developers.ledger.com/docs/embedded-app/design-requirements/#device-icon
@@ -52,17 +45,6 @@ ICON_NANOX = nanox_icon.gif
 ICON_NANOSP = nanox_icon.gif
 ICON_STAX = stax_icon.gif
 ICON_FLEX = flex_icon.gif
-
-ifeq ($(COIN),)
-    COIN = UM
-endif
-$(info COIN  = [$(COIN)])
-
-# Main app configuration
-APPNAME = "Penumbra"
-APPPATH = "44'/6532'"
-
-$(info PATHS LIST = $(APPPATH))
 
 # Application allowed derivation curves.
 # Possibles curves are: secp256k1, secp256r1, ed25519 and bls12381g1
@@ -77,6 +59,9 @@ CURVE_APP_LOAD_PARAMS = secp256k1
 # and SLIP-0044 standards.
 # If your app needs it, you can specify multiple path by using:
 # `PATH_APP_LOAD_PARAMS = "44'/1'" "45'/1'"`
+
+APPPATH = "44'/6532'"
+$(info PATHS LIST = $(APPPATH))
 PATH_APP_LOAD_PARAMS = $(APPPATH)
 
 # Setting to allow building variant applications
@@ -85,6 +70,10 @@ PATH_APP_LOAD_PARAMS = $(APPPATH)
 # - <VARIANT_VALUES> a list of variant that can be build using this app code.
 #   * It must at least contains one value.
 #   * Values can be the app ticker or anything else but should be unique.
+ifeq ($(COIN),)
+    COIN = UM
+endif
+$(info COIN  = [$(COIN)])
 VARIANT_PARAM=COIN
 VARIANT_VALUES=$(COIN)
 
@@ -125,7 +114,30 @@ ENABLE_NBGL_QRCODE = 1
 #DISABLE_DEBUG_LEDGER_ASSERT = 1
 #DISABLE_DEBUG_THROW = 1
 
-# Configure devices
+########################################
+#        Other configurations          #
+########################################
+# Set the default value for PRODUCTION_BUILD to 0 if not already defined
+PRODUCTION_BUILD ?= 1
+# Display whether this is a production build or for internal use
+ifeq ($(PRODUCTION_BUILD), 1)
+    $(info ************ PRODUCTION_BUILD  = [PRODUCTION BUILD])
+else
+    $(info ************ PRODUCTION_BUILD  = [INTERNAL USE])
+endif
+ # Add the PRODUCTION_BUILD definition to the compiler flags
+DEFINES += PRODUCTION_BUILD=$(PRODUCTION_BUILD)
+
+# Display whether swap functionality is enabled or not
+ifeq ($(ENABLE_SWAP), 1)
+    $(info ************ HAVE_SWAP  = [ENABLED])
+else
+    $(info ************ HAVE_SWAP  = [DISABLED])
+endif
+
+########################################
+
+# Configure devices and permissions
 include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.devices
 # Create installer script
 include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.installer_script
@@ -137,9 +149,7 @@ include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.platform
 include $(CURDIR)/Makefile.rust
 
 $(info TARGET_NAME  = [$(TARGET_NAME)])
-
 $(info ICONNAME  = [$(ICONNAME)])
-
 ifeq ($(ICONNAME),)
 $(error ICONNAME is not set)
 endif
