--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/LedgerHQ/ledger-secure-sdk
 [submodule "deps/nanopb"]
 	path = deps/nanopb
-	url = git@github.com:nanopb/nanopb.git
+	url = https://github.com/nanopb/nanopb.git
