--- a/.github/workflows/proto_update.yml
+++ b/.github/workflows/proto_update.yml
@@ -5,6 +5,10 @@ on:
     - cron: '0 0 * * 1'  # Runs every Monday at 00:00 (UTC)
   workflow_dispatch:
 
+permissions:
+  contents: write
+  pull-requests: write
+  
 jobs:
   proto-update:
     runs-on: ubuntu-latest
@@ -76,5 +80,6 @@ jobs:
           title: "Update generated proto files"
           body: "This PR updates the generated proto files."
           branch: proto-update-${{ github.run_id }}
+          base: dev
           delete-branch: true
           draft: false
