make a draft PR

--- a/.github/workflows/proto_update.yml
+++ b/.github/workflows/proto_update.yml
@@ -82,4 +82,4 @@ jobs:
           branch: proto-update-${{ github.run_id }}
           base: dev
           delete-branch: true
-          draft: false
+          draft: true
