--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,6 +123,8 @@ jobs:
           key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-rust-
+      - name: Install rust-src component
+        run: rustup component add rust-src --toolchain stable-x86_64-unknown-linux-gnu
       - name: Build Standard app
         id: build
         shell: bash -l {0}
@@ -165,6 +167,8 @@ jobs:
           key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-rust-
+      - name: Install rust-src component
+        run: rustup component add rust-src --toolchain stable-x86_64-unknown-linux-gnu
       - name: Build Production app
         id: build
         shell: bash -l {0}
@@ -249,6 +253,8 @@ jobs:
           target: thumbv6m-none-eabi
           override: true
           profile: minimal
+      - name: Install rust-src component
+        run: rustup component add rust-src --toolchain stable-x86_64-unknown-linux-gnu
       - name: Cache Rust dependencies
         uses: actions/cache@v3
         with:
@@ -292,7 +298,7 @@ jobs:
     if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     container:
-      image: zondax/giest
+      image: zondax/ledger-app-builder:latest
       options: --user root
       env:
         BOLOS_SDK: /opt/stax-secure-sdk
@@ -312,6 +318,8 @@ jobs:
           target: thumbv6m-none-eabi
           override: true
           profile: minimal
+      - name: Install rust-src component
+        run: rustup component add rust-src --toolchain stable-x86_64-unknown-linux-gnu
       - name: Cache Rust dependencies
         uses: actions/cache@v3
         with:
@@ -375,6 +383,8 @@ jobs:
           target: thumbv6m-none-eabi
           override: true
           profile: minimal
+      - name: Install rust-src component
+        run: rustup component add rust-src --toolchain stable-x86_64-unknown-linux-gnu
       - name: Cache Rust dependencies
         uses: actions/cache@v3
         with:
