--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -201,6 +201,8 @@ jobs:
           toolchain: stable
       - name: Install node
         uses: actions/setup-node@v4
+        with:
+          node-version: 20
       - name: Install yarn
         run: |
           npm install -g yarn
