--- a/.gitignore
+++ b/.gitignore
@@ -76,11 +76,14 @@ tests_zemu/yarn.lock
 tests_zemu/tests/.DS_Store
 tests_tools/target
 fuzz-*.log
+fuzz/coverage/
+fuzz/logs/
 /scan-build
 app/rust/.cargo/registry
 app/rust/.cargo/.package-cache
 app/rust/.cargo/.global-cache
 app/rust/.cargo/git
 app/rust/target
+.cursor/
 
 tools/proto-bindgen/target
