--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,13 +41,20 @@ set(HUNTER_TLS_VERIFY OFF)
 
 enable_testing()
 
-option(ENABLE_FUZZING "Build with fuzzing instrumentation and build fuzz targets" OFF)
-option(ENABLE_COVERAGE "Build with source code coverage instrumentation" OFF)
-option(ENABLE_SANITIZERS "Build with ASAN and UBSAN" OFF)
+# Include common fuzzing configuration
+include(deps/ledger-zxlib/fuzzing/FuzzingCommon.cmake)
 
-string(APPEND CMAKE_C_FLAGS " -fno-omit-frame-pointer -g")
-string(APPEND CMAKE_CXX_FLAGS " -fno-omit-frame-pointer -g")
-string(APPEND CMAKE_LINKER_FLAGS " -fno-omit-frame-pointer -g")
+# Fuzzing options are now managed by FuzzingCommon.cmake
+# option(ENABLE_FUZZING "Build with fuzzing instrumentation and build fuzz targets" OFF)
+# option(ENABLE_COVERAGE "Build with source code coverage instrumentation" OFF)
+# option(ENABLE_SANITIZERS "Build with ASAN and UBSAN" OFF)
+
+# Frame pointer flags are now managed by FuzzingCommon.cmake when fuzzing is enabled
+if(NOT ENABLE_FUZZING)
+    string(APPEND CMAKE_C_FLAGS " -fno-omit-frame-pointer -g")
+    string(APPEND CMAKE_CXX_FLAGS " -fno-omit-frame-pointer -g")
+    string(APPEND CMAKE_LINKER_FLAGS " -fno-omit-frame-pointer -g")
+endif()
 
 hunter_add_package(fmt)
 find_package(fmt CONFIG REQUIRED)
@@ -64,62 +71,15 @@ FetchContent_MakeAvailable(nlohmann_json)
 hunter_add_package(GTest)
 find_package(GTest CONFIG REQUIRED)
 
+# Fuzzing configuration is now managed by FuzzingCommon.cmake
+# Additional project-specific fuzzing setup can be added here if needed
 if(ENABLE_FUZZING)
-    add_definitions(-DFUZZING_BUILD_MODE_UNSAFE_FOR_PRODUCTION=1)
-    SET(ENABLE_SANITIZERS ON CACHE BOOL "Sanitizer automatically enabled" FORCE)
-    SET(CMAKE_BUILD_TYPE Debug)
-
     if (DEFINED ENV{FUZZ_LOGGING})
         add_definitions(-DFUZZING_LOGGING)
         message(FATAL_ERROR "Fuzz logging enabled")
     endif()
 
     set(CMAKE_CXX_CLANG_TIDY clang-tidy -checks=-*,bugprone-*,cert-*,clang-analyzer-*,-cert-err58-cpp,misc-*)
-
-    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-        # require at least clang 3.2
-        if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 10.0)
-            message(FATAL_ERROR "Clang version must be at least 10.0!")
-        endif()
-    else()
-        message(FATAL_ERROR
-                "Unsupported compiler! Fuzzing requires Clang 10.\n"
-                "1. Install clang-10 \n"
-                "2. Use -DCMAKE_C_COMPILER=clang-10 -DCMAKE_CXX_COMPILER=clang++-10")
-    endif()
-
-    string(APPEND CMAKE_C_FLAGS " -fsanitize=fuzzer-no-link")
-    string(APPEND CMAKE_CXX_FLAGS " -fsanitize=fuzzer-no-link")
-    string(APPEND CMAKE_LINKER_FLAGS " -fsanitize=fuzzer-no-link")
-endif()
-
-if(ENABLE_COVERAGE)
-    file(MAKE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/fuzz/coverage")
-    
-    string(APPEND CMAKE_C_FLAGS " -fprofile-instr-generate=fuzz/coverage/%p.profraw -fcoverage-mapping")
-    string(APPEND CMAKE_CXX_FLAGS " -fprofile-instr-generate=fuzz/coverage/%p.profraw -fcoverage-mapping")
-    string(APPEND CMAKE_LINKER_FLAGS " -fprofile-instr-generate=fuzz/coverage/%p.profraw -fcoverage-mapping")
-endif()
-
-if(ENABLE_SANITIZERS)
-    string(APPEND CMAKE_C_FLAGS " -fsanitize=address,undefined")
-    string(APPEND CMAKE_CXX_FLAGS " -fsanitize=address,undefined")
-    string(APPEND CMAKE_LINKER_FLAGS " -fsanitize=address,undefined")
-    
-    string(APPEND CMAKE_C_FLAGS " -fsanitize-recover=address,undefined")
-    string(APPEND CMAKE_CXX_FLAGS " -fsanitize-recover=address,undefined")
-    string(APPEND CMAKE_LINKER_FLAGS " -fsanitize-recover=address,undefined")
-    
-    string(APPEND CMAKE_C_FLAGS " -fsanitize-address-use-after-scope")
-    string(APPEND CMAKE_CXX_FLAGS " -fsanitize-address-use-after-scope")
-    string(APPEND CMAKE_LINKER_FLAGS " -fsanitize-address-use-after-scope")
-    
-    string(APPEND CMAKE_C_FLAGS " -fsanitize=integer -fsanitize=bounds")
-    string(APPEND CMAKE_CXX_FLAGS " -fsanitize=integer -fsanitize=bounds")
-    string(APPEND CMAKE_LINKER_FLAGS " -fsanitize=integer -fsanitize=bounds")
-
-    string(APPEND CMAKE_C_FLAGS " -fstack-protector-strong")
-    string(APPEND CMAKE_CXX_FLAGS " -fstack-protector-strong")
 endif()
 
 set (RETRIEVE_MAJOR_CMD
@@ -266,17 +226,11 @@ add_dependencies(app_lib rslib)
 ##############################################################
 #  Fuzz Targets
 if(ENABLE_FUZZING)
-    set(FUZZ_TARGETS
-        parser_parse
-        )
-
-    foreach(target ${FUZZ_TARGETS})
-        add_executable(fuzz-${target} ${CMAKE_CURRENT_SOURCE_DIR}/fuzz/${target}.cpp)
-        target_link_libraries(fuzz-${target} PRIVATE 
-        app_lib
-        rslib)
-        target_link_options(fuzz-${target} PRIVATE "-fsanitize=fuzzer")
-    endforeach()
+    # Setup fuzzing directories
+    setup_fuzz_directories()
+    
+    # Add fuzz targets using the common macro
+    add_fuzz_target(parser_parse ${CMAKE_CURRENT_SOURCE_DIR}/fuzz/parser_parse.cpp app_lib rslib)
 else()
     ##############################################################
     #  Tests
